Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29902

Terminal never receives Ctrl+Q

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • Qt Creator 12.0.0
    • Qt Creator 12.0.0
    • Terminal
    • None
    • Ubuntu 22.04 LTS
      bash 5.1.16
    • 7819fc5df (12.0)

      I can reproduce the following regardless of the state of the terminal's "shortcuts" button in step 4.

      1. (optional) Open a file in Creator and make changes to it.
        This will stop Creator from closing immediately. Instead it will show the "changed files" dialog.
      2. In the built-in terminal view, start a long-running command.
        I used "watch -n1 df -h ."
        The command will run and the terminal will show its output.
      3. Press Ctrl+S.
        The running command is paused.
      4. Press Ctrl+Q to make the command proceed.
        Creator quits. (Or shows the "changed files" dialog.)

      Instead, Ctrl+Q should arrive in the terminal.

        For Gerrit Dashboard: QTCREATORBUG-29902
        # Subject Branch Project Status CR V

            madwinter Marcus Tillmanns
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes