Terminal: Only unlock exit on macOS

Fixes: QTCREATORBUG-29902
Change-Id: Ifbb1f12c874f2f68483a34ac6e117214211e5be4
Reviewed-by: Eike Ziller <eike.ziller@qt.io>